--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Project</title>
+    <link rel="icon" type="image/png" href="./rk_logo.png">
   </head>
   <body>
     <div id="root"></div>
